src/templates/slider/css/no-captions.css
/* First adjust the size of the item area */
.fg-slider.fgs-no-captions {
	padding-right: 70px;
}
.fg-slider.fgs-no-captions.fgs-sm {
	padding-right: 100px;
}

.fg-slider.fgs-no-captions.fgs-md,
.fg-slider.fgs-no-captions.fgs-lg,
.fg-slider.fgs-no-captions.fgs-xl {
	padding-right: 150px;
}

.fg-slider.fgs-no-captions .fgs-item-container {
	width: 70px;
}

.fg-slider.fgs-no-captions.fgs-sm .fgs-item-container {
	width: 100px;
}

.fg-slider.fgs-no-captions.fgs-md .fgs-item-container,
.fg-slider.fgs-no-captions.fgs-lg .fgs-item-container,
.fg-slider.fgs-no-captions.fgs-xl .fgs-item-container {
	width: 150px;
}

/* Adjust the size of the item area for horizontal view */
.fg-slider.fgs-no-captions.fgs-horizontal {
	padding-right: 0;
	padding-bottom: 56px;
}
.fg-slider.fgs-no-captions.fgs-horizontal.fgs-md,
.fg-slider.fgs-no-captions.fgs-horizontal.fgs-lg,
.fg-slider.fgs-no-captions.fgs-horizontal.fgs-xl {
	padding-right: 0;
	padding-bottom: 77px;
}

.fg-slider.fgs-no-captions.fgs-horizontal .fgs-item-container {
	width: 100%;
	height: 56px;
}

.fg-slider.fgs-no-captions.fgs-horizontal.fgs-md .fgs-item-container,
.fg-slider.fgs-no-captions.fgs-horizontal.fgs-lg .fgs-item-container,
.fg-slider.fgs-no-captions.fgs-horizontal.fgs-xl .fgs-item-container {
	width: 100%;
	height: 77px;
}



/* Next hide the caption itself */
.fg-slider.fgs-no-captions .fg-caption {
	display: none;
}

/* Now make adjustments to the layout of the item itself to display the thumb more predominantly */
.fg-slider.fgs-no-captions .fg-item-inner {
	padding: 4px;
}

.fg-slider.fgs-no-captions.fgs-md .fg-item-inner,
.fg-slider.fgs-no-captions.fgs-lg .fg-item-inner,
.fg-slider.fgs-no-captions.fgs-xl .fg-item-inner {
	padding: 8px;
}

.fg-slider.fgs-no-captions .fg-thumb {
	float: none;
	padding: 4px;
	margin-left: 0;
	margin-right: 0;
	width: 100%;
	height: 48px;
	display: block;
}

.fg-slider.fgs-no-captions.fgs-md .fg-thumb,
.fg-slider.fgs-no-captions.fgs-lg .fg-thumb,
.fg-slider.fgs-no-captions.fgs-xl .fg-thumb {
	height: 60px;
}

